# quantum-teams

./: .coverage  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_placeholder.py
