[project]
name = "quantum-teams"
version = "0.1.0"
description = "Enterprise quantum-safe messaging with hybrid PQC/QKD encryption"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GianlucaVallini99", email = "gianlucavallini92@gmail.com"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_teams"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/quantum_teams --cov-report=term-missing"